--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,3 +4,7 @@ python-dateutil==2.8.2
 pyyaml==6.0
 pyspark==3.5.1
 py4j==0.10.9.7
+kafka-python==2.0.2
+pymongo==4.3.3
+python-binance==1.0.16
+requests==2.28.1
